<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">


        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_email_forgot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/forgot_hint_email" />
        </android.support.design.widget.TextInputLayout>


        <com.dd.processbutton.iml.ActionProcessButton
            android:id="@+id/btn_forgot"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"

            android:text="@string/forgot_button"

            custom:pb_colorComplete="@color/green_complete"
            custom:pb_colorNormal="@color/colorButton"
            custom:pb_colorPressed="@color/colorButtonPressed"
            custom:pb_colorProgress="@color/white"
            custom:pb_textComplete="@string/login_progress_complete"
            custom:pb_textProgress="@string/login_progress"
            />



    </LinearLayout>
</ScrollView>
