<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.overdrive.foodintake.MainActivity"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    >

    <android.support.design.widget.AppBarLayout
        android:id="@+id/main_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"

            app:layout_collapseMode="pin"
            app:layout_scrollFlags="scroll|snap"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/main_leftButton"
                android:layout_width="55dp"
                android:layout_height="66dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"

                style="?android:attr/borderlessButtonStyle"
                android:drawableStart="@drawable/left"
                />

            <EditText
                android:id="@+id/main_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="date"
                android:textSize="20sp"
                android:textAlignment="center" />

            <Button
                android:id="@+id/main_rightButton"
                android:layout_width="56dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorPrimary"

                style="?android:attr/borderlessButtonStyle"
                android:drawableEnd="@drawable/right" />
        </LinearLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/main_fab"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/plusbig"

        tools:layout_editor_absoluteX="287dp"
        tools:layout_editor_absoluteY="496dp" />

    <android.support.v4.widget.NestedScrollView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/main_breakText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/main_breakfast"

                android:textAlignment="center"
                android:textSize="24sp"
                 />

            <ListView
                android:id="@+id/main_breakList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/main_lunchText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/main_lunch"

                android:textAlignment="center"
                android:textSize="24sp"
                 />

            <ListView
                android:id="@+id/main_lunchList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/main_dinnerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:layout_marginTop="20dp"

                android:text="@string/main_dinner"
                android:textAlignment="center" />

            <ListView
                android:id="@+id/main_dinnerList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
